User and equipment creation/editing pages: Fixed button alignment. Adjusted spacing between title and back arrow. Improved responsiveness after changes.

--- a/src/shared/styles/pages/user/Signup.css
+++ b/src/shared/styles/pages/user/Signup.css
@@ -11,21 +11,32 @@
   height: 80px;
 }
 
+#signup .signup-content {
+  padding: 0% 10% 10% 10%;
+}
+
 /* ESTILIZAÇÃO DO TITULO E SUBTITULO DA PÁGINA */
 #signup .signup-content .signup-title {
-  padding: 5% 10% 0 5%;
+  padding: 5% 10% 3% 0;
 }
 
 #signup .signup-title h1 {
+  display: flex;
+  align-items: center;
   font-size: 2rem;
   font-weight: 400;
   color: var(--color-black-light);
+  gap: 0.5rem;
+}
+
+#signup .signup-title svg {
+padding-top: 0.5vw;
 }
 
 /* ESTILIZAÇÃO DO FORMULÁRIO */
 
 #signup .signup-form {
-  padding: 2% 5%;
+  padding: 2% 0%;
   height: 50%;
   width: 100%;
   border-bottom: 100px;
@@ -34,16 +45,11 @@
 #signup .signup-form .form-sections {
   display: flex;
   flex-direction: column;
-  column-gap: 2rem;
 }
 
-#signup .signup-form input {
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
-}
-
+#signup .signup-form input,
 #signup .signup-form select {
-  margin-top: 2.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 1rem;
 }
 
@@ -51,7 +57,7 @@
   display: flex;
   flex-direction: column;
   flex-direction: row;
-  gap: 3rem;
+  justify-content: space-between;
 }
 
 #signup .signup-form div {
@@ -71,9 +77,8 @@
 }
 
 #signup .signup-form .signup-submit {
+  padding-top: 5%;
   text-align: end;
-  padding-top: 1%;
-  margin-right: 5rem;
 }
 
 #signup form label {
@@ -83,15 +88,9 @@
 
 #signup Footer {
   padding: 1.5;
-
   position: fixed;
   bottom: 0;
   left: 0;
-}
-
-#signup .signup-title h1 {
-  display: flex;
-  align-items: center;
 }
 
 #signup .signup-title h1 div {
@@ -102,17 +101,9 @@
   width: 223% !important;
 }
 
-#signup button.button-secondary {
-  margin-right: 1rem;
-}
-
 @media only screen and (min-width: 768px) and (max-width: 1227px) {
-  #signup .signup-content {
-    margin-left: 5%;
-  }
-
   #signup .signup-content .signup-title {
-    padding: 0 10% 0 5%;
+    padding: 0 0 5% 0;
   }
 
   #signup .signup-title h1 {
@@ -121,7 +112,6 @@
 
   #signup .signup-content {
     margin-top: 3rem;
-    padding: 0%;
   }
 
   #signup .signup-form {
@@ -133,14 +123,6 @@
   }
 
   #signup .signup-form .signup-data {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-  }
-
-  #signup .signup-form .signup-data ChoiceField{
-    display: flex;
-    justify-content: space-between;
     flex-direction: row;
   }
 
@@ -152,30 +134,6 @@
 
   #signup form label {
     color: var(--color-black-light);
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1227px) {
-  #signup Footer {
-    position: fixed;
-  }
-}
-
-@media only screen and (max-width: 1227px) {
-  #signup button.button-secondary {
-    margin-bottom: 1rem;
-  }
-
-  #signup button.button-primary,
-  #signup button.button-secondary {
-    width: 100% !important;
-    height: 3rem !important;
-  }
-
-  #signup .signup-submit {
-    margin-top: 1rem;
-    margin-bottom: 3rem;
-    margin-right: 0 !important;
   }
 }
 
@@ -189,15 +147,16 @@
   }
 
   #signup .signup-content {
-    margin-left: 5%;
-  }
-
-  #signup .signup-content .signup-title {
-    padding: 0 10% 0 5%;
+    margin-left: 9%;
   }
 
   #signup .signup-title h1 {
     font-size: 1.5rem;
+    gap: 0.4rem;
+  }
+
+  #signup .signup-title svg {
+    padding-top: 0.4vw;
   }
 
   #signup .signup-content {
@@ -209,9 +168,19 @@
     width: 90%;
   }
 
+  #signup button.button-primary {
+    width: 100% !important;
+    height: 3rem !important;
+  }
+
+  #signup .signup-submit {
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+  }
+
   #signup .signup-form .signup-data {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
   }
 
@@ -219,7 +188,6 @@
     display: flex;
     flex-direction: column;
     margin: 0;
-    align-content: space-around;
   }
 
   #signup form label {
@@ -229,21 +197,12 @@
   #signup Footer {
     position: relative;
   }
-
-  #signup .signup-form .signup-data {
-    gap: 0;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  #signup Footer {
-    position: fixed;
-  }
 }
 
 @media only screen and (max-width: 465px) {
   #signup .signup-title h1 {
     font-size: 1.5rem !important;
+    gap: 0.2rem;
   }
 
   #signup .signup-title h1 svg {
